# gircore-blueprint-template

./: GirCoreBlueprint.csproj  LICENSE  README.md  gircore-blueprint-template.sln
template/: Application.cs  Constants.cs  Program.cs  README.md  __APP_NAME__.csproj  meson.build
template/.template.config/: template.json
template/UI/: MainWindow.cs
template/__APP_NAME__/: Application.cs  Constants.cs  Program.cs  meson.build
template/__APP_NAME__/UI/: MainWindow.cs
template/__APP_NAME__/Ui/: MainWindow.cs
template/build-aux/: __APP_ID__.json  __APP_ID__.yaml  nuget-sources.json
template/data/: __APP_ID__.Desktop.in  __APP_ID__.appdata.xml.in  __APP_ID__.gresource.xml  __APP_ID__.gschema.xml  meson.build
template/data/icons/: meson.build
template/data/ui/: MainWindow.blp
template/po/: meson.build
